[package]
name = "sparse_matrix"
authors = ["Kevin Coetsier"]
description = "A library to do linear algebra with sparse matrix"
documentation = "https://docs.rs/sparse_matrix"
readme = "README.md"
license = "MIT"
version = "0.4.6"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
